<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/menu_user">
        <item
                android:id="@+id/navigation_home"
                android:icon="@drawable/ic_home_dark"
                android:title="@string/home"/>

        <item
                android:id="@+id/navigation_order"
                android:icon="@drawable/ic_order_dark"
                android:title="@string/order"/>

        <item
                android:id="@+id/navigation_wallet"
                android:icon="@drawable/ic_wallet_dark"
                android:title="@string/wallet"/>

        <item
                android:id="@+id/navigation_referral"
                android:icon="@drawable/ic_referral_dark"
                android:title="@string/referral"/>
    </group>
</menu>