<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
            android:id="@+id/cr_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            card_view:cardUseCompatPadding="true"
            card_view:cardElevation="4dp"
            card_view:cardCornerRadius="6dp">

        <android.support.constraint.ConstraintLayout
                android:id="@+id/cl_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <ImageView
                    android:id="@+id/iv_photo"
                    android:layout_width="@dimen/image_width_medium"
                    android:layout_height="@dimen/image_width_medium"
                    app:srcCompat="@mipmap/ic_launcher"
                    android:contentDescription="@string/new_product"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

            <View
                    android:layout_width="@dimen/image_width_medium"
                    android:layout_height="@dimen/image_width_medium"
                    android:background="@drawable/shadow"
                    card_view:layout_constraintStart_toStartOf="parent"
                    card_view:layout_constraintTop_toTopOf="@+id/iv_photo" android:id="@+id/view"/>

            <TextView
                    android:id="@+id/tv_name"
                    android:layout_weight="1"
                    android:singleLine="false"
                    android:scrollHorizontally="false"
                    android:text="@string/premium"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_size_normal"
                    android:textStyle="bold"
                    android:layout_width="115dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="@dimen/spacing_normal"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="@dimen/spacing_normal"
                    card_view:layout_constraintEnd_toEndOf="@+id/view"
                    card_view:layout_constraintHorizontal_bias="0.0"/>

            <TextView
                    android:id="@+id/tv_price"
                    android:text="@string/premium_desc"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_size_small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/text_size_smaller"
                    app:layout_constraintTop_toBottomOf="@+id/tv_name"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="@dimen/spacing_normal"/>

            <ImageView
                    android:id="@+id/iv_icon"
                    android:layout_width="@dimen/icon_size_large"
                    android:layout_height="@dimen/icon_size_normal"
                    app:srcCompat="@drawable/wendy"
                    android:layout_marginTop="@dimen/spacing_smaller"
                    android:layout_marginBottom="@dimen/spacing_smaller"
                    app:layout_constraintTop_toBottomOf="@+id/iv_photo"
                    android:contentDescription="@string/new_product"
                    app:layout_constraintStart_toStartOf="parent"
                    card_view:layout_constraintBottom_toBottomOf="parent"/>
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</layout>